kubernetes/apps/actual/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual
  namespace: actual
  annotations:
    gethomepage.dev/enabled: "false"
    gethomepage.dev/icon: actual-budget.png
    gethomepage.dev/name: Actual
spec:
  parentRefs:
  - name: one-gateway-for-all
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - actual.lafranque.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: actual
      namespace: actual
      port: 5006
---
# HTTPRoute pour HTTP (redirection 301)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual-http-redirect
  namespace: actual
spec:
  parentRefs:
  - name: one-gateway-for-all
    namespace: envoy-gateway-system
    sectionName: http
  hostnames:
  - actual.lafranque.net
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
